还差细节处理，需要定功能

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -523,10 +523,16 @@
           "header": {
             "operator": "Operator",
             "value": "Value",
+            "reducedValue": "Reduced Value",
+            "reducedType": {
+              "constant": "Constant",
+              "metrics": "Metrics"
+            },
             "color": {
               "title": "Color",
               "background": "Background",
-              "text": "Text"
+              "text": "Text",
+              "icon": "Icon"
             },
             "range": {
               "title": "Applied range",
